Fichero reset CSS Almeria

--- a/02_ejercicio/css/style.css
+++ b/02_ejercicio/css/style.css
@@ -1,8 +1,13 @@
-heaader p {
+*, 
+*::before, *::after, 
+*:before, *:after { 
+box-sizing : border-box;
+}
+/* heaader p {
     color: maroon;
     font-size: 1.5rem;
     font-weight: bold;
 }
 footer p {
     color: navy;
-}
+} */
