--- a/02_ejercicio/css/style.css
+++ b/02_ejercicio/css/style.css
@@ -1,13 +1,26 @@
-*, 
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700i');
+
+body {
+    font-family: 'Roboto', sans-serif;
+}
+ 
 *::before, *::after, 
 *:before, *:after { 
 box-sizing : border-box;
 }
-/* heaader p {
+header h1 {
+    font-family: 'Coiny' cursive;
+
+}
+heaader p {
     color: maroon;
     font-size: 1.5rem;
     font-weight: bold;
 }
-footer p {
+h2 {
+    font-style: italic;
+    font-weight: bold;
+}
+/* footer p {
     color: navy;
 } */
