--- a/02_ejercicio/css/style.css
+++ b/02_ejercicio/css/style.css
@@ -1,26 +1,29 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,700i');
+/* @import url('https://fonts.googleapis.com/css?family=Roboto:400,700i'); */
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif, serif;
 }
- 
-*::before, *::after, 
-*:before, *:after { 
-box-sizing : border-box;
+
+.container{
+    width: 90%;
+    max-width: 1800px;
+    min-width: 480px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2rem;
+    margin-bottom: 2rem;   
 }
 header h1 {
-    font-family: 'Coiny' cursive;
+    font-family: Coiny, cursive;
 
 }
-heaader p {
+header p {
     color: maroon;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     font-weight: bold;
 }
 h2 {
     font-style: italic;
     font-weight: bold;
 }
-/* footer p {
-    color: navy;
-} */
+
