--- a/02_ejercicio/css/style.css
+++ b/02_ejercicio/css/style.css
@@ -15,7 +15,16 @@ body {
 }
 header h1 {
     font-family: Coiny, cursive;
-
+    width: 40%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+    border: 1px solid black;
+    padding: 2rem 3rem;
+    box-shadow: .5rem .5rem .5rem .5rem dimgray;
+    border-radius: 3rem;
+    text-align: center;
 }
 header p {
     color: maroon;
@@ -25,5 +34,8 @@ header p {
 h2 {
     font-style: italic;
     font-weight: bold;
+}
+nav ul li{
+    display: inline-block;
 }
 
