--- a/02_ejercicio/css/style.css
+++ b/02_ejercicio/css/style.css
@@ -14,7 +14,8 @@ body {
     margin-bottom: 2rem;   
 }
 header h1 {
-    font-family: Coiny, cursive;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 2.5rem;
     width: 40%;
     margin-left: auto;
     margin-right: auto;
@@ -26,16 +27,27 @@ header h1 {
     border-radius: 3rem;
     text-align: center;
 }
-header p {
-    color: maroon;
-    font-size: 1.3rem;
-    font-weight: bold;
-}
+
 h2 {
     font-style: italic;
     font-weight: bold;
 }
 nav ul li{
     display: inline-block;
+    width: 9.7rem;
+    margin: 1rem;
+    padding: 1rem;
+    background-color: rgb(206, 206, 206);
+    text-align: center;
+    border-radius: .5rem;
+}
+
+table{
+    background-color: rgb(221, 221, 221);
+    border-collapse: collapse;
+}
+td, th{
+    border: .1rem solid;
+    padding: .7rem; 
 }
 
