--- a/02_almeria/css/style.css
+++ b/02_almeria/css/style.css
@@ -7,12 +7,17 @@ body {
 
 .container{
     width: 90%;
-    max-width: 1800px;
+    max-width: 1600px;
     min-width: 480px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 2rem;
     margin-bottom: 2rem;   
+}
+/******** Estilo header "Municipio de Almeria" ********/
+.head{
+    background-image: url("..//images/almeria3.jpg");
+    height: 350px;
+    padding-top: 1rem;
 }
 header h1 {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -20,31 +25,53 @@ header h1 {
     width: 40%;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 4rem;
-    margin-bottom: 4rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
     border: 1px solid black;
-    padding: 2rem 3rem;
-    box-shadow: .5rem .5rem .5rem .5rem dimgray;
+    padding: 3rem 3rem;
+    /* box-shadow: .5rem .5rem .5rem .5rem dimgray; */
     border-radius: 3rem;
     text-align: center;
-    background-color: rgb(206, 206, 206);
+    background-color: #D2CFCA;
+    opacity: .8;
+}
+h1::after{
+    content: url("../images/escudo.png")
 }
 
-h2 {
-    font-style: italic;
-    font-weight: bold;
+
+/******** Menu de navegacion superior ********/
+nav li a.active{
+    background: #AA997E;
 }
+.hover:hover{
+    color: #D2CFCA;
+    background-color: #AA997E
+}
+
 nav ul li{
     display: inline-block;
-    width: 9.7rem;
+    padding-top: 2rem;
+}
+
+nav ul li a:link, a:visited{
     margin: 1rem;
-    padding: 1rem;
-    background-color: rgb(206, 206, 206);
+    padding: 1rem 3rem;
+    background-color: #D2CFCA;
     text-align: center;
     border-radius: .5rem;
+    display: inline-block;
+    text-decoration: none;
+    color: black;
 }
+
+/******** Estilos tabla "Núcleos de población y distancia en km a la capital del municipio" ********/
 table{
     border-collapse: collapse;
+    display: inline-block;
+    padding-top: 2rem;
+    padding-right: 1.5rem;
+    
 }
 th{
     background-color: rgb(221, 221, 221);   
@@ -58,6 +85,7 @@ td, th{
     border: .1rem solid;
     padding: .7rem; 
 }
+/******** Estilo aplicado imagenes ********/
 
 figure{
     margin: 0;
@@ -67,15 +95,63 @@ figure{
     padding-bottom: 2rem;
     width: 50%;
 }
+
 figure img{
     width: 100%;
     height: auto;
     padding-bottom: .5rem;
 }
+figure>p.primero::first-letter{
+    font-size: 2rem;
+}
 figcaption{
     text-align: center
 }
-figure{
-    
+
+/******* aside Noticias ********/
+aside{
+    display: inline-block;
+    border: 1px solid;
+    padding: .5rem;
+    width: 673px;
+    margin-top: 3.5rem;
+    margin-right: 2rem;
+    margin-bottom: 1rem;
+    margin-left: .5rem;
+    height: 19rem;
+    overflow: auto;
+    float: right; 
+}
+aside h2{
+    text-align: center;
+    text-decoration: underline;
+}
+aside ul li a{
+    font-size: 1.3rem;
+    text-decoration: none;
+    text-align: right;
+    line-height: 2rem;
+}
+aside a:link{
+    color: red;
+}
+aside a:visited{
+    color: blue;
+}
+/******** Video Almeria ********/
+.video{
+    width: 100%;
+}
+video{
+    width: 60%;
 }
 
+/******** footer ********/
+
+footer{
+    margin-top: 1rem;
+    position: relative;
+    padding: 3rem 0rem;
+    text-align: center;
+    background-color: aqua;
+}
