--- a/02_almeria/css/style.css
+++ b/02_almeria/css/style.css
@@ -4,7 +4,6 @@ body {
     font-family: 'Roboto', sans-serif, serif;
     background-color: antiquewhite;
 }
-
 .container{
     width: 90%;
     max-width: 1600px;
@@ -39,7 +38,6 @@ h1::after{
     content: url("../images/escudo.png")
 }
 
-
 /******** Menu de navegacion superior ********/
 nav li a.active{
     background: #AA997E;
@@ -48,7 +46,6 @@ nav li a.active{
     color: #D2CFCA;
     background-color: #AA997E
 }
-
 nav ul li{
     display: inline-block;
     padding-top: 2rem;
@@ -70,8 +67,7 @@ table{
     border-collapse: collapse;
     display: inline-block;
     padding-top: 2rem;
-    padding-right: 1.5rem;
-    
+    padding-right: 1.5rem;   
 }
 th{
     background-color: rgb(221, 221, 221);   
@@ -85,8 +81,8 @@ td, th{
     border: .1rem solid;
     padding: .7rem; 
 }
-/******** Estilo aplicado imagenes ********/
 
+/******** Estilo aplicado imagenes ********/
 figure{
     margin: 0;
     float: left;
@@ -95,7 +91,6 @@ figure{
     padding-bottom: 2rem;
     width: 50%;
 }
-
 figure img{
     width: 100%;
     height: auto;
@@ -122,9 +117,10 @@ aside{
     overflow: auto;
     float: right; 
 }
-aside h2{
+aside h2, h3, .ciudades h2{
     text-align: center;
     text-decoration: underline;
+    color: blue;
 }
 aside ul li a{
     font-size: 1.3rem;
@@ -141,6 +137,10 @@ aside a:visited{
 /******** Video Almeria ********/
 .video{
     width: 100%;
+    height: 500px;
+    clear: left;
+    margin-bottom: 4rem;
+    text-align: center;
 }
 video{
     width: 60%;
@@ -153,5 +153,22 @@ footer{
     position: relative;
     padding: 3rem 0rem;
     text-align: center;
-    background-color: aqua;
+    background-color: #D2CFCA;
 }
+
+/* .ciudades{
+    width: 100%;
+    margin-right:0;
+    margin-left: 0;
+    padding-top: 1rem;
+}
+.ciudades::after{
+        content: '';
+        display: block;
+        clear: both;
+}
+.ciudades li{
+    width: 20%;
+    padding: 1rem;
+    float: left;
+} */
