--- a/02_almeria/css/style.css
+++ b/02_almeria/css/style.css
@@ -28,7 +28,6 @@ header h1 {
     margin-bottom: 2rem;
     border: 1px solid black;
     padding: 3rem 3rem;
-    /* box-shadow: .5rem .5rem .5rem .5rem dimgray; */
     border-radius: 3rem;
     text-align: center;
     background-color: #D2CFCA;
@@ -87,7 +86,7 @@ td, th{
 .puerto figure{
     float: left;
     padding-bottom: 2rem;
-    width: 44%;
+    width: 43%;
 }
 .puerto figure img{
     width: 100%;
@@ -104,13 +103,12 @@ figure>p.primero::first-letter{
 
 /******* aside Noticias ********/
 aside{
-    border: 1px solid;
     padding: .5rem;
-    width: 673px;
-    margin-top: 3.5rem;
+    width: 640px;
+    margin-top: 5.5rem;
     margin-bottom: 1rem;
     margin-left: .5rem;
-    height: 19rem;
+    height: 17rem;
     overflow: auto;
     float: right; 
 }
@@ -141,8 +139,6 @@ aside a:visited{
 /******** Video Almeria ********/
 .video{
     width: 100%;
-    /* height: 500px; */
-    /* clear: left; */
     margin-bottom: 4rem;
     text-align: center;
 }
@@ -156,11 +152,14 @@ video{
     margin-left: 0;
 }
 .ciudad{
-    display: inline-block;
-    margin: .3rem;
-    width: 19%;
+    float: left;
+    margin: .75rem;
+    width: 18%;
     height: 25rem;
     padding-top: .5rem;
+}
+.provincia:last-child{
+    clear: both;
 }
 .provincia h2{
     text-align: center;
@@ -175,6 +174,8 @@ video{
 /******** footer ********/
 
 footer{
+    display: inline-block;
+    width: 100%;
     margin-top: 1rem;
     position: relative;
     padding: 3rem 0rem;
