--- a/javascript_Web/06_forms/form1.css
+++ b/javascript_Web/06_forms/form1.css
@@ -3,7 +3,7 @@
 }
 .control-group label{
     display: inline-block;
-    width: 20%;
+    width: 10%;
     min-width: 10rem;
 }
 .control-group input{
@@ -12,4 +12,7 @@
 }
 .ocultar{
     display: none
+}
+.cursos{
+    margin-left: 2rem;
 }
