--- a/javascript_Web/08_fetch/style.css
+++ b/javascript_Web/08_fetch/style.css
@@ -22,3 +22,10 @@ main div.output {
     border: 1px solid lightsteelblue;
     width: 50%;
 }
+table, th, td {
+    border: 1px solid black;
+    border-collapse:collapse;
+  }
+  th, td {
+    padding: 5px;
+  }
