--- a/javascript_Web/formok/style.css
+++ b/javascript_Web/formok/style.css
@@ -12,30 +12,41 @@ h1{
 
 .contacto label {
     display: inline-block;
-    width: 20%;
+    width: 30%;
     min-width: 10rem;
 }
-form{
-
-   border:3px solid #D2CFCA;
-   margin: 50px 50px 50px 50px
+.contenedor{
+    width: 70%;
+    
 }
+/* form{
+    padding: 2rem;
+    border:3px solid #D2CFCA;
+    margin: 50px 50px 50px 50px
+} */
 .contacto {
-    padding: 0.5rem;
+    padding: 0.5rem;     
 }
-.centro {
+.check-group{
+    display: inline;
+    padding: 0.7rem;
+}
+/* .centro {
     text-align: center;
+} */
+.identificacion{
+/*     display: inline-block; */
+    width: 40%
 }
-
 .contacto input{
     border: 1px solid black;
     height: 1.5rem;
-    width: 30%;
+    width: 50%;
 }
 .btn-enviar{
     margin-bottom: 40px;
     color: blue;
-    margin-top: 2rem;
+    margin-top: 1rem;
     height: 2rem;
     width: 5rem;
 }
